package entity;

public class Series extends Media {
    private String activeYears;
    private int totalEpisodes;
    private String[][] episodes;

    public Series(String title, double rating, String category, String[][] episodes, String activeYears) {
        super(title, rating, category);
        this.episodes = episodes;
        this.activeYears = activeYears;
        this.totalEpisodes = countTotalEpisodes();
    }

    private int countTotalEpisodes() {
        int count = 0;
        /*for (String[] season : episodes) {
            count += season.length;
        } */
        for (int i = 0; i < episodes.length; i++){
            for (int j = 0; j < episodes[i].length; j++){
                count++;
            }
        }
        return count;
    }

    public int getTotalEpisodes() {
        return totalEpisodes;
    }

    public String getActiveYears() {
        return activeYears;
    }

    public String[][] getEpisodes() {
        return episodes;
    }

    public void setActiveYears(String activeYears) {
        this.activeYears = activeYears;
    }

    public void setEpisode(String[][] episodes) {
        this.episodes = episodes;
        this.totalEpisodes = countTotalEpisodes();
    }

    @Override
    public String toString() {
        return "entity.Series{" +
                "title='" + getTitle() + '\'' +
                ", category='" + getCategory() + '\'' +
                ", rating=" + getRating() +
                ", activeYears='" + activeYears + '\'' +
                ", totalEpisodes=" + totalEpisodes +
                ", seasons=" + episodes.length +
                '}';
    }

}

