@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

class Main
Main : +static void main(String[] args)
class TemuNetflix
TemuNetflix : -Arraylist<Media> Media
TemuNetflix : +void startStartMenu();
TemuNetflix : -Arraylist<String> Options
TemuNetflix : +Arraylist<String> displayOptions();
TemuNetflix : +void searchMovie(String movieName);
TemuNetflix : +void listCategory(Arraylist<String> Category);
TemuNetflix : +void listWatchedMovies(User username, String[] watchedMovies);
TemuNetflix : +void listSavedMovies(User username, String[] savedMovies);
TemuNetflix : +void chosenMovie(String title);
TemuNetflix : +void chosenSeries(String title, int episode);
TemuNetflix : +void saveMovie(String title);
TemuNetflix : +void watchMovie(String title);
TemuNetflix : +void saveSeries(String title, int episode);
TemuNetflix : +void watchSeries(String title, int episode);



abstract class StartMenu
StartMenu : +checkLogin();
StartMenu : +newLogin();
StartMenu : +guest();
class Media
Media : -String title
Media : -float rating
Media : -Arraylist<String> category
Media : +Arraylist<String> displayCategory();
Media : +String getTitle();
Media : +float getRating();
Media : +String getCategory();

class Movie extends Media implements playable
Movie : -int releaseDate
Movie : +int getReleaseDate();

class Series extends Media implements playable
Series : -String activeYears
Series : -int totalEpisodes
Series : -Array[season][episode] episode
Series : +String getActiveYears();
Series : +int getTotalEpisodes();
Series : +Array[season][episode] displayEpisode();
Series : +int getEpisode();

class User
User : -username
User : -password
User : -Arraylist<Media> watchedMovies
'kan være String skal være entity.Media
User : -Array[season][episode] watchedSeries
User : -Arraylist<Media> savedMovies
User : +getUserName();
User : +getWatchedMovies();
User : +getSavedMovies();

interface playable

package "Util" #DDDDDD{
class FileIO
FileIO : createFile();
FileIO : readFile();
class TextUI
TextUI : -Scanner scan
TextUI : displayMsg();
TextUI : readInputNum();
TextUI : readInputText();
TextUI : choiceYN();
}
Main --- TemuNetflix
TemuNetflix "1"<-- StartMenu
TemuNetflix "x"<-- Media
StartMenu <-- User
TemuNetflix *-- TextUI
TemuNetflix *-- FileIO

@enduml
